@@ -1,6 +1,7 @@
 * 2013-11-06 - tobias.friedrich@open-xchange.com
 
  - Fix for bug 29609: Use cached sessions for consecutive WebDAV requests of the same client 
+ - Fix for bug 29641: Supply one 'supported-calendar-component-set' inside 'supported-calendar-component-sets' for each supported component
 
 * 2013-11-05 - thorben.betten@open-xchange.com
 
